<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_miulogo"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="4dp"
        android:paddingHorizontal="32dp"
        android:paddingBottom="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/required_filed"
            android:textSize="14sp"
            android:textStyle="bold"/>


        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textColor="@color/dark_gray"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/registration_form_background"
            android:padding="12dp"/>


        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textColor="@color/dark_gray"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/registration_form_background"
            android:padding="12dp"/>


        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textColor="@color/dark_gray"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/registration_form_background"
            android:padding="12dp"/>


        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/dark_gray"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/registration_form_background"
            android:padding="12dp"/>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:background="@drawable/sign_in_button_background"
            android:textColor="@color/white"/>


    </androidx.appcompat.widget.LinearLayoutCompat>



</LinearLayout>