<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_miulogo"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_into_your_account"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="4dp"
        android:layout_marginHorizontal="1dp"
        android:paddingTop="32dp"
        android:paddingHorizontal="32dp"
        android:paddingBottom="24dp"
        android:background="@drawable/registration_form_background"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address_required"
            android:textColor="@color/dark_gray"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/registration_form_background"
            android:padding="12dp"/>


        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_required"
            android:textColor="@color/dark_gray"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/registration_form_background"
            android:padding="12dp"/>


        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/forget_password"
            android:textSize="14sp"
            android:textStyle="bold"/>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:background="@drawable/sign_in_button_background"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:background="@color/gray"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="@string/don_t_have_account"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@color/gray"/>




        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_account"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:background="@drawable/registration_form_background"
            android:textColor="@color/blue"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>